--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -12,6 +12,14 @@
         <servlet-name>TakeAtt</servlet-name>
         <servlet-class>controller.lecture.TakeAtt</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>controller.auth.Login</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Logout</servlet-name>
+        <servlet-class>controller.auth.Logout</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Schedule</servlet-name>
         <url-pattern>/schedule</url-pattern>
@@ -23,6 +31,14 @@
     <servlet-mapping>
         <servlet-name>TakeAtt</servlet-name>
         <url-pattern>/lecture/takeatt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Logout</servlet-name>
+        <url-pattern>/logout</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
