--- a/MyAssignment/web/WEB-INF/web.xml
+++ b/MyAssignment/web/WEB-INF/web.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>NewFilter</filter-name>
+        <filter-class>filter.NewFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>NewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>Schedule</servlet-name>
         <servlet-class>controller.Schedule</servlet-class>
@@ -20,6 +28,14 @@
         <servlet-name>Logout</servlet-name>
         <servlet-class>controller.auth.Logout</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NewServlet</servlet-name>
+        <servlet-class>listener.NewServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TakeAtt_detail</servlet-name>
+        <servlet-class>controller.lecture.TakeAtt_detail</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Schedule</servlet-name>
         <url-pattern>/schedule</url-pattern>
@@ -29,16 +45,24 @@
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>TakeAtt</servlet-name>
-        <url-pattern>/lecture/takeatt</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>Login</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Logout</servlet-name>
         <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NewServlet</servlet-name>
+        <url-pattern>/NewServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TakeAtt</servlet-name>
+        <url-pattern>/takeatt</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>TakeAtt_detail</servlet-name>
+        <url-pattern>/takeatt_detail</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
